--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-<img src="/spacex-logo.webp" alt=" logo" class="navlogo"> 
+<img src="assets/images/spacex-logo.webp" alt=" logo" class="navlogo"> 
             <div class="navmenu">
                 <ul class="navlist">
                     <li class="navitem">
